--- a/limelight-detector-training-notebook.ipynb
+++ b/limelight-detector-training-notebook.ipynb
@@ -41,13 +41,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "ypWGYdPlLRUN",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "288bb1ec-0b16-4077-92f6-13efd00bd81a"
+        "outputId": "59435f5c-7e17-4a94-f61b-09e561f39c95"
       },
       "outputs": [
         {
@@ -58,15 +58,14 @@
             "remote: Enumerating objects: 4395, done.\u001b[K\n",
             "remote: Counting objects: 100% (4395/4395), done.\u001b[K\n",
             "remote: Compressing objects: 100% (3206/3206), done.\u001b[K\n",
-            "remote: Total 4395 (delta 1189), reused 3087 (delta 1115), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (4395/4395), 70.05 MiB | 17.78 MiB/s, done.\n",
+            "remote: Total 4395 (delta 1189), reused 3086 (delta 1115), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (4395/4395), 70.05 MiB | 38.90 MiB/s, done.\n",
             "Resolving deltas: 100% (1189/1189), done.\n",
-            "Updating files: 100% (3960/3960), done.\n",
             "remote: Enumerating objects: 3099, done.\u001b[K\n",
             "remote: Counting objects: 100% (3099/3099), done.\u001b[K\n",
             "remote: Compressing objects: 100% (1386/1386), done.\u001b[K\n",
             "remote: Total 1851 (delta 1243), reused 705 (delta 446), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (1851/1851), 10.08 MiB | 12.10 MiB/s, done.\n",
+            "Receiving objects: 100% (1851/1851), 10.08 MiB | 19.51 MiB/s, done.\n",
             "Resolving deltas: 100% (1243/1243), completed with 758 local objects.\n",
             "From https://github.com/tensorflow/models\n",
             " * branch            ad1f7b56943998864db8f5db0706950e93bb7d81 -> FETCH_HEAD\n",
@@ -87,8 +86,7 @@
             "\n",
             "Turn off this advice by setting config variable advice.detachedHead to false\n",
             "\n",
-            "HEAD is now at ad1f7b5 adjust folder path\n",
-            "Requirement already satisfied: protobuf==3.20.3 in /usr/local/lib/python3.12/dist-packages (3.20.3)\n"
+            "HEAD is now at ad1f7b5 adjust folder path\n"
           ]
         }
       ],
@@ -101,19 +99,18 @@
         "\n",
         "MLENVIRONMENT=\"COLAB\"\n",
         "!git clone --depth 1 https://github.com/tensorflow/models\n",
-        "!cd models && git fetch --depth 1 origin ad1f7b56943998864db8f5db0706950e93bb7d81 && git checkout ad1f7b56943998864db8f5db0706950e93bb7d81\n",
-        "!pip install protobuf==3.20.3"
+        "!cd models && git fetch --depth 1 origin ad1f7b56943998864db8f5db0706950e93bb7d81 && git checkout ad1f7b56943998864db8f5db0706950e93bb7d81"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "6QPmVBSlLTzM",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "63bc8b8c-997d-4bb3-f2cd-5b8e7bdc95c6"
+        "outputId": "70b752db-58ae-44ba-e644-b849caa0cdd1"
       },
       "outputs": [
         {
@@ -427,8 +424,7 @@
         "# Install\n",
         "!pip install {HOMEFOLDER}models/research/\n",
         "if(MLENVIRONMENT == \"COLAB\"):\n",
-        "    !pip install tensorflow==2.19.0\n",
-        "    !pip install protobuf==3.20.3\n",
+        "    !pip install tensorflow==2.15.0\n",
         "    !pip install grpcio-status==1.71.2"
       ]
     },
@@ -1246,8 +1242,7 @@
         "XFsuasvxFHo8"
       ],
       "gpuClass": "premium",
-      "gpuType": "V100",
-      "machine_shape": "hm",
+      "gpuType": "T4",
       "provenance": [],
       "include_colab_link": true
     },
